# o-libs

./: .gitignore  CMakeLists.txt  README.md
lib-finance/: CMakeLists.txt
lib-finance/include/: finance.h
lib-finance/src/: finance.c
lib-finance/test/: finance_test.c
lib-oxica/: CMakeLists.txt
lib-oxica/include/: ox_cmdline.h
lib-oxica/src/: ox_cmdline.c
lib-oxica/test/: ox_cmdline_test.c
